[gd_scene load_steps=12 format=3 uid="uid://dxx0nbvya2muc"]

[ext_resource type="Script" path="res://bpm_select.gd" id="1_5mrto"]
[ext_resource type="Texture2D" uid="uid://dje8cwxvmpktq" path="res://art_assets/bpm_select_title.png" id="2_l6wi1"]
[ext_resource type="Texture2D" uid="uid://ds3g6s7tn0pjl" path="res://art_assets/bpm_60.png" id="3_ch1mn"]
[ext_resource type="Texture2D" uid="uid://delan4cj44klv" path="res://art_assets/bpm_100.png" id="4_avg1j"]
[ext_resource type="Texture2D" uid="uid://c0n0om77bww08" path="res://art_assets/bpm_120.png" id="5_cgwjx"]
[ext_resource type="Texture2D" uid="uid://c8p1afn4thsat" path="res://art_assets/back_button.png" id="6_hwpkx"]
[ext_resource type="Script" path="res://back_button.gd" id="7_a00xx"]
[ext_resource type="FontFile" uid="uid://ceqsmd7sr5uio" path="res://fonts/spartan/Spartan-Regular.ttf" id="8_b2dxe"]
[ext_resource type="Texture2D" uid="uid://bcwg1xa1ckyh2" path="res://art_assets/custom_bpm.png" id="9_aosh3"]

[sub_resource type="Gradient" id="Gradient_wsbfj"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xy4aa"]
gradient = SubResource("Gradient_wsbfj")
fill_from = Vector2(0, 1)
fill_to = Vector2(0.860092, 0.37844)

[node name="BpmSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5mrto")

[node name="MainMenuBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_xy4aa")

[node name="BpmSelectUiContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_right = 312.0
offset_bottom = 136.0
grow_horizontal = 2

[node name="BpmSelectTitle" type="TextureRect" parent="BpmSelectUiContainer"]
layout_mode = 2
texture = ExtResource("2_l6wi1")

[node name="BpmButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -186.0
offset_right = 559.0
offset_bottom = 350.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="SixtyBpmButton" type="Button" parent="BpmButtonsContainer"]
layout_mode = 2
icon = ExtResource("3_ch1mn")
flat = true
icon_alignment = 1

[node name="HundredBpmButton" type="Button" parent="BpmButtonsContainer"]
layout_mode = 2
icon = ExtResource("4_avg1j")
flat = true
icon_alignment = 1

[node name="OneTwentyBpmButton" type="Button" parent="BpmButtonsContainer"]
layout_mode = 2
icon = ExtResource("5_cgwjx")
flat = true
icon_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
icon = ExtResource("6_hwpkx")
flat = true
icon_alignment = 1
script = ExtResource("7_a00xx")

[node name="BpmInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -555.0
offset_top = 82.0
offset_right = -46.0
offset_bottom = 172.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_b2dxe")
theme_override_font_sizes/font_size = 50

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 249.0
offset_right = 1168.0
offset_bottom = 417.0
texture = ExtResource("9_aosh3")

[connection signal="pressed" from="BpmButtonsContainer/SixtyBpmButton" to="." method="_on_sixty_bpm_button_pressed"]
[connection signal="pressed" from="BpmButtonsContainer/HundredBpmButton" to="." method="_on_hundred_bpm_button_pressed"]
[connection signal="pressed" from="BpmButtonsContainer/OneTwentyBpmButton" to="." method="_on_one_twenty_bpm_button_pressed"]
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_pressed"]
[connection signal="text_submitted" from="BpmInput" to="." method="_on_bpm_input_text_submitted"]
